infra/controllers/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: authentik-system
spec:
  ingressClassName: traefik
  rules:
  - host: authentik.yadunut.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 80
  - host: "*.i.yadunut.dev"
    http:
      paths:
      - path: /outpost.goauthentik.io/
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 80
  tls:
  - hosts:
    - authentik.yadunut.dev
    secretName: wildcard-cert-yadunut.dev-prod
